2008-09-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Show ellipsis (...) item when there are too many symbol names for
   autocompletion.
 * src/editor.c:
   Apply patch from Jason Oster to highlight matching brace indent
   guides (thanks, #2104099).


2008-09-14 Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * COPYING: Fixing a little encoding issue in GPL text.
 * po/tr.po, po/LINGUAS, src/about.c, THANKS: Adding Turkish translation
   provided by Gürkan Gür. Thanks for it.


2008-09-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c:
   When checking for starting auto completion always use the style
   of the previous character and remove possible error indicator styles
   which caused wrong checking (should fix #2058005).


2008-09-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.xml, src/highlighting.c:
   Add missing HTML attribute 'xml:lang'.


2008-09-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scripts/missing-mnemonics.sh, scripts/svn-add.sh:
   Remove bashisms.
   Add support for passing asterisk wildcards to missing-mnemonics.sh.
 * src/plugindata.h, src/plugins.c, src/ui_utils.c, src/ui_utils.h:
   Add ui_get_toolbar_insert_position() for plugins to get a position to
   insert new toolbar items.
 * src/log.c:
   Update the debug messages automatically in the debug messages window
   if it is open.


2008-09-07  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * doc/geany.1.in:
   Little typographic update to use minus sign instead of a hyphen
   in the manpage.


2008-09-07  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.html, doc/geany.txt:
   Update feature list.
   Small updates of outdated information.
   Remove 'Supported Systems' sub section.


2008-09-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, src/build.c, src/callbacks.c, src/callbacks.h,