@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="$Date$" />
+<meta name="date" content="2008-09-08" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>$Date$</td></tr>
+<td>2008-09-08</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.15</td></tr>
 </tbody>
@@ -785,18 +785,18 @@ might be that the encoding of a file cannot be detected correctly so
 you have to set manually the encoding of the file in order to display
 it correctly. You can this in the file open dialog by selecting
 an encoding in the drop down box or by reloading the file with the
-file menu item &quot;Reload as&quot;. The auto detection works well for most
-encodings but there are also some encodings known where auto detection
+file menu item &quot;Reload as&quot;. The auto-detection works well for most
+encodings but there are also some encodings known where auto-detection
 has its problems. Auto detecting the encoding of a file is not easy
 and sometimes an encoding might be detected not correctly.</p>
 <p>There are different ways to use different encodings in Geany:</p>
 <ul>
 <li><p class="first">Using the file open dialog</p>
 <p>This opens the file with the encoding specified in the encoding drop
-down box. If the encoding is set to &quot;Detect from file&quot; auto detection
+down box. If the encoding is set to &quot;Detect from file&quot; auto-detection
 will be used. If the encoding is set to &quot;Without encoding (None)&quot; the
 file will be opened without any character conversion and Geany will
-not try to auto detect the encoding(see below for more information).</p>
+not try to auto-detect the encoding (see below for more information).</p>
 </li>
 <li><p class="first">Using the &quot;Reload as&quot; menu item</p>
 <p>This item reloads the current file with the specified encoding. It can
@@ -807,8 +807,8 @@ help if you opened a file and found out that a wrong encoding was used.</p>
 the current file unless you save it. It is useful when you want to
 change the encoding of the file.</p>
 </li>
-<li><p class="first">Specifying the encoding in the file itself
-As mentioned above, auto detecting the encoding of a file may fail on
+<li><p class="first">Specifying the encoding in the file itself</p>
+<p>As mentioned above, auto-detecting the encoding of a file may fail on
 some encodings. If you know that Geany doesn't open a certain file,
 you can add a special line to the beginning of the file to force an
 encoding when opening the file (for details see below).</p>
@@ -860,7 +860,7 @@ Anything after the first 512 bytes will not be recognised.</p>
 <div class="section">
 <h3><a class="toc-backref" href="#id34" id="special-encoding-none" name="special-encoding-none">Special encoding &quot;None&quot;</a></h3>
 <p>There is a special encoding &quot;None&quot; which is actually no real
-encoding. It is useful when you know that Geany cannot auto detect
+encoding. It is useful when you know that Geany cannot auto-detect
 the encoding of a file and it is not displayed correctly. Especially
 when the file contains NUL-bytes this can be useful to skip auto
 detection and open the file properly at least until the occurrence
@@ -4240,7 +4240,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2008-09-07 20:26 UTC.
+Generated on: 2008-09-15 13:05 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
