@@ -6,6 +6,9 @@
  * src/editor.c:
    Apply patch from Jason Oster to highlight matching brace indent
    guides (thanks, #2104099).
+ * doc/geany.txt, doc/geany.html:
+   s/auto detect/auto-detect.
+   Minor formatting fixes.
 
 
 2008-09-14 Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
